[gd_scene load_steps=3 format=3 uid="uid://deopa7q3pt2wf"]

[ext_resource type="Script" path="res://addons/godot-doom-player/scenes/main/main.gd" id="1_o4r0k"]

[sub_resource type="ImageTexture" id="ImageTexture_xaos0"]

[node name="Main" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_o4r0k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SizeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Size"

[node name="SizeOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen (keep aspect ratio)"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="DOOM" type="DOOM" parent="VBoxContainer"]
assets_wad_path = "res://addons/godot-doom-player/resources/wad/DOOM1.WAD"
assets_soundfont_path = "res://addons/godot-doom-player/resources/sf3/MuseScore_General.sf3"
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 240)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("ImageTexture_xaos0")
stretch_mode = 5

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SizeOptionButton" to="." method="_on_size_option_button_item_selected"]
